# scrooge

./: PROJECT.yml
scrooge-benchmark/: BUILD.bazel
scrooge-benchmark/src/main/scala/: BUILD.bazel
scrooge-benchmark/src/main/scala/com/twitter/scrooge/benchmark/: AdaptTProtocol.scala  AirlineGenerator.scala  Collections.scala  CollectionsBenchmark.scala  TRewindable.scala  TransportBenchmark.scala
scrooge-benchmark/src/main/thrift/: collections.thrift
scrooge-core/src/main/scala/: BUILD
scrooge-core/src/main/scala/com/twitter/scrooge/: TBaseReusableMemoryTransport.scala  TByteArrayMemoryTransport.scala  TFieldBlob.scala  TReusableBuffer.scala  TReusableMemoryTransport.scala  TUnsafeBinaryProtocol.scala  TUnsafeBinaryProtocolFactory.scala
scrooge-core/src/main/scala/com/twitter/scrooge/internal/: TProtocols.scala
scrooge-core/src/test/scala/: BUILD
scrooge-core/src/test/scala/com/twitter/scrooge/: UnsafeBinaryProtocolSpec.scala
scrooge-generator-tests/src/test/resources/: gen_gold_files.sh
scrooge-generator/src/main/resources/apachejavagen/: service.mustache
scrooge-generator/src/main/resources/scalagen/: service.mustache
scrooge-generator/src/main/scala/com/twitter/scrooge/: Compiler.scala
scrooge-generator/src/main/scala/com/twitter/scrooge/backend/: StructTemplate.scala
scrooge-serializer/src/main/scala/com/twitter/scrooge/: ThriftStructSerializer.scala
scrooge-serializer/src/test/scala/com/twitter/scrooge/: ThriftStructSerializerTest.scala
(+18 files in other folders)
