scala_benchmark_jmh(
    name = "benchmark",
    sources = ["**/*.scala"],
    compiler_option_sets = ["fatal_warnings"],
    platform = "java8",
    dependencies = [
        "3rdparty/jvm/org/apache/thrift:libthrift",
        "3rdparty/jvm/org/openjdk/jmh:jmh-core",
        "scrooge/scrooge-adaptive",
        "scrooge/scrooge-adaptive/src/test/scala/com/twitter/scrooge/adapt/testutil",
        "scrooge/scrooge-benchmark/src/main/thrift:thrift-scala",
        "scrooge/scrooge-core/src/main/scala",
        "scrooge/scrooge-serializer",
    ],
)

jvm_binary(
    name = "jmh",
    main = "org.openjdk.jmh.Main",
    platform = "java8",
    dependencies = [
        ":benchmark_compiled_benchmark_lib",
        scoped(
            "3rdparty/jvm/org/slf4j:slf4j-nop",
            scope = "runtime",
        ),
    ],
)

jvm_app(
    name = "jmh-bundle",
    basename = "scrooge-benchmark-bundle",
    binary = ":jmh",
)
